
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 MAR 11a
  * in model/chem/_H2_He_CH4_Plasma_13s
    - added doc directory
  * in model/chem/_H2_He_CH4_Plasma_13s/chem.c
    - implemented Chris Johnston's Neptune atmosphere model
  * in model/share/fluid_share.c
    - in find_Saxi(), added the effective pressure to the total energy flux axisymmetric source
      as it should be
      

2021 MAR 07a
  * in model/chem/_CO2_Plasma_23s_Park/chem.c
    - made modifications to the reactions so that the backward and forward temperatures 
  * in model/chem/_CO2_Plasma_23s_Park/doc/report.tex
    - made modifications to the reactions so that the backward and forward temperatures 
      

2021 FEB 27c
  * in config/config.c
    - in read_config_file(), made changes so that the options that are both EXPERIMENTAL
      and PROPRIETARY are not hidden when doing make config or make configp
      

2021 FEB 27b
  * in bin
    - updated Starikovskii.wrp
    

2021 FEB 27a
  * in model/fluid/_Favre-Reynolds_plasma/fluid.h
    - added _kappae()
    

2021 FEB 22a
  * in model/thermo/_generic/thermo.c
    - in _kappa_from_w_T() and _eta_from_w_T(), fixed a bug introduced in 21feb21a related
      to including the electron species
      

2021 FEB 21c
  * in model/chem/_CO2_Plasma_23s_Park/chem.c
    - fixed a bug: reaction 13 used N instead of X as a parameter
    

2021 FEB 21b
  * in src/common.h
    - in gl_t, added boolean variable OUTPUTBINARYMPI
  * in src/data.c
    - added header unistd.h
    - added functions _ai_mpidatafile(),read_data_file_mpi(),write_data_file_mpi() to implement 
      parallel I/O file format WARPMPBFORMAT010
    - modified functions write_data_file(),read_data_file() to implement parallel I/O file format 
      WARPMPBFORMAT010