@@ -434,10 +434,14 @@ No. & Reaction\tnote{(b)} & Forward          & Backward    & $A$, $\textrm{cm}^3
     3  & $\rm e^- + NO   \rightarrow NO^+ + e^- + e^-$  
        &  ${\rm exp}(-5.9890\cdot 10^{-6} \cdot {\rm ln}^4 E^\star + 2.5988\cdot 10^{-84} \cdot {\rm ln}^{51}E^\star)$~cm$^3$/s
        & BOLSIG+ \\
+    4  & $\rm  e^- + NO  \rightarrow NO^+ + e^- + e^-$ 
+       &  $2.5 \cdot 10^{34} \cdot {\cal A}^{-1} \cdot T_{\rm e}^{-3.78} \exp\left(-168600 / T_{\rm e}\right) $~cm$^3$/s
+       & \cite{book:1990:park} \\
+
     \bottomrule
     \end{tabular*}
 \begin{tablenotes}
-\item[{a}] Notation and units: $E^\star$ is the reduced effective electric field ($E^\star\equiv|\vec{E}|/N$) in units of V$\cdot$m$^2$.
+\item[{a}] Notation and units: ${\cal A}$ is Avogadro's number set to $6.02214 \times 10^{23}$ mol$^{-1}$; $E^\star$ is the reduced effective electric field ($E^\star\equiv|\vec{E}|/N$) in units of V$\cdot$m$^2$.
 
 \end{tablenotes}
    \end{threeparttable}
